# cwmed

./: .gitignore  LICENSE  NDC_to_RxNorm_1.ipynb  README.md  crosswalk.py  cwmed.py  demo.ipynb  example_crosswalk.ipynb  omop_concept_vocab.ipynb  pyproject.toml  requirements.txt  source_to_target_example.csv  voc_to_voc_translator.ipynb  voc_to_voc_translator_class.ipynb
.github/workflows/: crosswalk-tests.yml
sample-data/output/: icd10_to_snomed.csv  icd10_to_snomed_failed_mappings.csv
tests/: test_crosswalk.py  test_cwmed.py
tests/data/: concept_example_icd10_snomed.csv  concept_relationship_example_icd10_snomed.csv  medications_mimiciv_sourcedata_ndc.csv  source_2.csv  source_icd10_to_snomed_example.csv  source_icd10_to_snomed_failed_mappings_example_expected_result.csv
tests/data/expected/: icd10_to_snomed.csv  icd10_to_snomed_failed_mappings.csv
tests/data/input/: icd10.csv
