[project]
name = "crosswalk_medical"
version = "0.0.1"
authors = [
  { name="xavier borrat", email="xborrat@mit.edu" },
]
description = "walk between medical terminologies"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "requests >= 2.8.1",
  "pandas >= 1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/xborrat/medical-standard-voc-translator"
"Bug Tracker" = "https://github.com/xborrat/medical-standard-voc-translator"


